--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -1,16 +1,4 @@
 body.home{
-    .hero_image{
-        @media only screen and ( min-width:981px ) {
-        /* Set the slider height */
-            .et_pb_slider, .et_pb_slider .et_pb_container { 
-                height: 800px !important; 
-            }
-            .et_pb_slider, .et_pb_slider .et_pb_slide { 
-                max-height: 800px; 
-            }
-            
-        }
-    }
 
 	.primate_slider .et_pb_slide{ 
         max-height: 300px; 
@@ -31,6 +19,9 @@ body.home{
         width: 100%;
         max-width: 100%;
         margin: 0 auto;
+        @media only screen and ( min-width:981px ) {
+            height: 800px !important;
+        }
     }
     .et_pb_slide_content{
         position: absolute;
