--- a/scss/partials/_sidebar.scss
+++ b/scss/partials/_sidebar.scss
@@ -10,6 +10,10 @@
 		line-height: 1.2;
 		margin: 0 0 0.25em;
 	}
+	p{
+		font-size: 16px;
+		line-height: 1.5;
+	}
 }
 
 .napsa_sidebar{
